🛠 Refactoring Code * Use modifiable list, instead of creating unmodifiable list which will be wrapped in modifiable list again